--- a/templates/timer.html
+++ b/templates/timer.html
@@ -290,13 +290,14 @@
         </div>
         <div class="col-md-4 text-center" id="bartext">
             <div class="row" id="takeabreak">
-                Take a break
+                <input type="submit" value="Take a break" class="bottom-button" id="takebreak"> </input>
             </div>
             <div class="row" style="padding-top:40px;">
-                Reset
+                <input type="submit" value="Reset" class="bottom-button" id="reset"> </input>
             </div>
 
         </div>
+
     </div>
 
 
@@ -313,6 +314,11 @@
     /*#takeabreak{
   padding-top:4vh;
 }*/
+    .bottom-button{
+      background-color: white;
+      border:none;
+      outline:none;
+    }
 
     #bartext {
         /* online: */
