--- a/templates/home.html
+++ b/templates/home.html
@@ -184,6 +184,9 @@
     }
 </style>
 <script>
+  var roomNumber = "{{ room }}";
+
+
   $('#startbutton').click(function(){
     var roomname=document.getElementById('roomname').value
     var password=document.getElementById('password').value
