--- a/templates/timer.html
+++ b/templates/timer.html
@@ -172,6 +172,10 @@
 
                         countdown(msg.currenttime);
                         clearInterval(x);
+                        var minutes = (Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60))).toString();
+                        var seconds = (Math.floor((distance % (1000 * 60)) / 1000)).toString();
+                        document.getElementById("time").innerHTML = minutes + ":" + seconds;
+
 
                     }
                 }
