--- a/templates/timer.html
+++ b/templates/timer.html
@@ -174,6 +174,14 @@
                         clearInterval(x);
                         var minutes = (Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60))).toString();
                         var seconds = (Math.floor((distance % (1000 * 60)) / 1000)).toString();
+                        if (seconds.length === 1) {
+                            seconds = '0' + seconds;
+
+                        }
+                        if (minutes.length === 1) {
+                            minutes = '0' + minutes;
+
+                        }
                         document.getElementById("time").innerHTML = minutes + ":" + seconds;
 
 
