--- a/templates/timer.html
+++ b/templates/timer.html
@@ -155,6 +155,7 @@
                 clearInterval(x);
                 numbersession = msg.session;
                 distance = msg.currenttime;
+                online=msg.online;
                 document.getElementById("onlinenumber").innerHTML = msg.online;
 
 
